--- a/server/liveblog/themes/themes_assets/default/templates/template-poll-utils.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-poll-utils.html
@@ -27,4 +27,17 @@
       document.getElementById(pollOpenId).style.display = "flex";
     }
   }
+
+  function placeVote(event, form) {
+    event.preventDefault();
+    var formData = new FormData(form);
+
+    var data = {};
+    for (var pair of formData.entries()) {
+      data[pair[0]] = pair[1];
+    }
+
+    var voteEvent = new CustomEvent('place_vote', { detail: data });
+    document.dispatchEvent(voteEvent);
+  }
 </script>
