Persist user votes in storage and update UI accordingly if user has already voted on a poll

--- a/server/liveblog/themes/themes_assets/default/templates/template-poll.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-poll.html
@@ -38,7 +38,7 @@
 
       <div class="lb-poll_footer">
           <div class="lb-poll_footer_summary">
-            <p class="lb-poll_subtitle">Total Votes: <span id="total-votes-{{ pollId }}"></span></p>
+            <p class="lb-poll_subtitle">Total Votes: <span id="total-votes-{{ pollId }}"></span><span id="total-votes-updated-{{ pollId }}"></span></p>
             <p class="lb-poll_subtitle">&bull;</p>
             <p class="lb-poll_subtitle"><span id="vote-end-{{ pollId }}"></span></p>
           </div>
