--- a/server/liveblog/themes/themes_assets/default/templates/template-poll.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-poll.html
@@ -6,7 +6,7 @@
     <form class="lb-poll_form" onsubmit="placeVote(event, this)">
 
       <!-- When the poll is open -->
-      <div id="poll-open-{{ pollId }}" class="lb-poll_options_container">
+      <div id="poll-open-{{ pollId }}" class="lb-poll_options_container" style="display: flex;">
         {% for answer in poll.answers %}
           <div class="lb-poll_open_option">
             <input type="radio" class="lb-poll_custom_radio" id="{{ pollId }}-answer-{{ loop.index0 }}" name="selectedOption" value="{{ loop.index0 }}" required>
@@ -38,7 +38,7 @@
 
       <div class="lb-poll_footer">
           <div class="lb-poll_footer_summary">
-            <p class="lb-poll_subtitle">Total Votes: <span id="total-votes-{{ pollId }}"></span><span id="total-votes-updated-{{ pollId }}"></span></p>
+            <p class="lb-poll_subtitle">Total Votes: <span id="total-votes-{{ pollId }}"></span></p>
             <p class="lb-poll_subtitle">&bull;</p>
             <p class="lb-poll_subtitle"><span id="vote-end-{{ pollId }}"></span></p>
           </div>
