Use updatePost to render new post information after voting

--- a/server/liveblog/themes/themes_assets/default/templates/template-poll.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-poll.html
@@ -1,7 +1,7 @@
 {% set pollId = ref.item._id %}
 {% set poll = ref.item.poll_body %}
 
-<div class="lb-poll_container">
+<div id="poll-container-{{ pollId }}" class="lb-poll_container">
   <p class="lb-poll_question">{{ poll.question }}</p>
     <form class="lb-poll_form" onsubmit="placeVote(event, this)">
 
