--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -886,6 +886,11 @@
         margin-right: 0px;
         margin-bottom: 1px;
     }
+    max-height: 348px;
+    overflow-y: auto;
+    &::-webkit-scrollbar {
+        width: 5px;
+    }
 }
 .freetype-selector::before {
     width: 15px;
