--- a/server/liveblog/themes/themes_assets/amp/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-post.html
@@ -17,6 +17,7 @@
   {% set sortTime = item.published_date | addten %}
 {% endif %}
 
+{% if type != "poll" %}
 <article
 id="{{ item._id | string | replace(':', '') | replace('-', '') | replace('.', '') }}"
 data-update-time="{{ item._updated | date('X') }}"
@@ -142,3 +143,4 @@ class="lb-post list-group-item show-author-avatar {% if item.sticky %}lb-item-pi
   {% endblock %}
 
 </article>
+{% endif %}
