--- a/server/liveblog/themes/themes_assets/default/templates/template-poll.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-poll.html
@@ -9,7 +9,7 @@
       <div id="poll-open-{{ pollId }}" class="lb-poll_options_container" style="display: flex;">
         {% for answer in poll.answers %}
           <div class="lb-poll_open_option">
-            <input type="radio" class="lb-poll_custom_radio" id="{{ pollId }}-answer-{{ loop.index0 }}" name="selectedOption" value="{{ loop.index0 }}" required>
+            <input type="radio" class="lb-poll_custom_radio" id="{{ pollId }}-answer-{{ loop.index0 }}" name="selectedOption" value="{{ answer.option }}" required>
             <label for="{{ pollId }}-answer-{{ loop.index0 }}" class="lb_poll_custom_label">{{ answer.option }}</label>
           </div>
         {% endfor %}
