--- a/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
@@ -1,12 +1,11 @@
 <script>
     function reloadInstagramScript() {
-        console.log("reloadInstagramScript called")
         const script = document.getElementById('instagram-script');
         if (script) {
-            console.log("script found")
             const newScript = script.cloneNode(true);
             script.remove();
             document.body.appendChild(newScript);
+            console.log("instgrm script reloaded")
         }
     }
     
@@ -15,7 +14,7 @@
             instgrm.Embeds.process();
             console.log('processing instagram embeds');
         } catch(err) {
-            console.log('instgrm script not loaded, retrying again', err)
+            console.log('instgrm script not loaded')
             setTimeout(reloadInstagramScript, 1000);
         }
     }
