--- a/server/liveblog/themes/themes_assets/default/templates/template-embed-instagram.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-embed-instagram.html
@@ -1,4 +1,9 @@
-<blockquote class="instagram-media" {% if ref.item.meta.show_embed_description %}data-instgrm-captioned{% endif %} data-instgrm-permalink="{{ref.item.meta.original_url}}" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+<blockquote
+	class="instagram-media"
+	data-instgrm-permalink="{{ref.item.meta.original_url}}"
+	data-instgrm-version="14"
+	{% if ref.item.meta.show_embed_description %}data-instgrm-captioned{% endif %}
+	style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
 	<div style="padding:16px;">
 		<a href="{{ref.item.meta.original_url}}" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
 			<div style=" display: flex; flex-direction: row; align-items: center;">
