Added styling to accomodate wrapping on freetypes

--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -885,6 +885,9 @@
         border-radius: 2px;
         margin-right: 0px;
         margin-bottom: 1px;
+        height: auto;
+        white-space: normal;
+        word-wrap: break-word;
     }
     max-height: 348px;
     overflow-y: auto;
