Removed "and LB community" from email templates

--- a/server/superdesk/templates/bandwidth_alert.html
+++ b/server/superdesk/templates/bandwidth_alert.html
@@ -12,6 +12,6 @@
 
 <p>The {{app_name}} Team</p>
 
-<p>{{app_name}} is developed by <a href="http://sourcefabric.org">Sourcefabric</a> and the {{app_name}} community.</p>
+<p>{{app_name}} is developed by <a href="http://sourcefabric.org">Sourcefabric</a>.</p>
 
 <p><a href="http://sourcefabric.org">http://sourcefabric.org</a></p>
