--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -346,6 +346,19 @@
                                     right: 7px;
                                 }
                             }
+                            
+                            // adding Beta label to Poll option
+                            a[data-type=poll] {
+                                &:after {
+                                    display: inline-block;
+                                    content: 'beta';
+                                    font-size: 9px;
+                                    color: red;
+                                    position: absolute;
+                                    top: -10px;
+                                    right: 3px;
+                                }
+                            }
 
                             padding: 0;
                             // [block types bar]
