Make use of Instagram Embedding API

--- a/server/liveblog/themes/themes_assets/classic/views/embeds/instagram.html
+++ b/server/liveblog/themes/themes_assets/classic/views/embeds/instagram.html
@@ -1,4 +1,3 @@
-<blockquote class="embedly-card" data-card-controls="0">
-    <h4><a href="{{ item.meta.original_url }}">{{ item.meta.credit }}</a></h4>
-    <p>{{ item.meta.title }}</p>
+<blockquote class="instagram-media" data-instgrm-permalink="{{item.meta.original_url}}" data-instgrm-version="14">
+    <a href="{{ item.meta.original_url }}">{{ item.meta.title }}</a>
 </blockquote>
